--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <!--Google Font-->
+    <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
+
     <!--Individual Stylesheet-->
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
