new link to tribute page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <div class="col-md-8 col-md-offset-2">
                     <div class="thumbnail-container">
                       <div class="thumbnail">
-                        <iframe src="https://codepen.io/ewotawa/full/ZymzwK/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                        <!--<iframe src="https://codepen.io/ewotawa/full/ZymzwK/" onload="this.style.opacity = 1" frameborder="0"></iframe> -->
+                        <iframe src="https://codepen.io/ewotawa/details/dzbrvE/" onload="this.style.opacity = 1" frameborder="0"></iframe>
                       </div>
                     </div>
                 </div> <!-- col -->
