use full tribute page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="thumbnail-container">
                       <div class="thumbnail">
                         <!--<iframe src="https://codepen.io/ewotawa/full/ZymzwK/" onload="this.style.opacity = 1" frameborder="0"></iframe> -->
-                        <iframe src="https://codepen.io/ewotawa/details/dzbrvE/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                        <iframe src="https://codepen.io/ewotawa/full/dzbrvE/" onload="this.style.opacity = 1" frameborder="0"></iframe>
                       </div>
                     </div>
                 </div> <!-- col -->
@@ -90,7 +90,7 @@
                 <p>I created this project for my freeCodeCamp Tribute Page assignment.
                 <p>The page functionality features HTML, CSS, and Bootstrap. The content profiles my favorite baseball player.</p>
                 <form>
-                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/ZymzwK/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/dzbrvE/') type="button" value="Launch Website">
                   <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
                 </form>
               </div> <!-- caption -->
