update contact section to row and col-md-12

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         <h1 class="text-center">Contact</h1>
         <hr>
         <div class="row">
-          <div class="col-md-10 col-md-offset-1">
+          <div class="col-md-12">
             <p>Feel free to drop me a line from this site. You can get in touch with me through the social media links below.</p>
           </div> <!--col-->
             <br>
-            <div class="text-center">
+            <div class="row text-center">
               <p onclick=window.open('https://www.freecodecamp.org/ewotawa') class="fa fa-free-code-camp fa-contact"></p>
               <p onclick=window.open('https://codepen.io/ewotawa/') class="fa fa-codepen fa-contact"></p>
               <p onclick=window.open('https://github.com/ewotawa') class="fa fa-github fa-contact"></p>
