new twitter handle

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <p onclick=window.open('https://codepen.io/ewotawa/') class="fa fa-codepen fa-contact"></p>
               <p onclick=window.open('https://github.com/ewotawa') class="fa fa-github fa-contact"></p>
               <p onclick=window.open('https://www.linkedin.com/in/elizabethwotawa/') class="fa fa-linkedin fa-contact"></p>
-              <p onclick=window.open('https://mobile.twitter.com/e_wotawa') class="fa fa-twitter fa-contact"></p>
+              <p onclick=window.open('https://mobile.twitter.com/PenguinPhoenixE') class="fa fa-twitter fa-contact"></p>
               <br>
             </div>
         </div>
