Convert to Penguin Phoenix 2018 04 18

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <!--font awesome icon library-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Creative Space</title>
+    <title>Penguin Phoenixace</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Creative Space</a>
+          <a class="navbar-brand" href="#">Penguin Phoenix</a>
         </div>
   
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,7 +47,7 @@
     <div class="row">
       <span id="about"></span>
       <div class="container col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 intro-box">
-        <h1 class="text-center">Elizabeth Wotawa's Creative Space</h1>
+        <h1 class="text-center">Adventures of the Penguin Phoenix</h1>
         <hr>
         <div class="row">
           <div class="col-md-6">
@@ -240,7 +240,7 @@
         <div class="container col-md-10 col-md-offset-1">
           <p>A <span class="fa fa-coffee"></span>-fueled project by Elizabeth Wotawa <span class="fa fa-hand-spock-o"></span></p>
           <br>
-          <p><small>Background image: <span class="span-link" onclick=window.open('http://hubblesite.org/image/3486/gallery')>STScI-2015-05</span> from <span onclick=window.open('http://hubblesite.org/') class="span-link">HubbleSite</span>.</small></p>
+          <!-- <p><small>Background image: <span class="span-link" onclick=window.open('http://hubblesite.org/image/3486/gallery')>STScI-2015-05</span> from <span onclick=window.open('http://hubblesite.org/') class="span-link">HubbleSite</span>.</small></p> -->
           <p><small><i class="fa fa-copyright" aria-hidden="true"></i> 2017. All Rights Reserved.</small></p>
         </div> <!--container-->
       </div> <!-- row -->
