update Jocko link, Weather App link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <div class="thumbnail-container">
                       <div class="thumbnail">
-                        <iframe src="https://codepen.io/ewotawa/full/NaWYQo/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                        <iframe src="https://ewotawa.github.io/jocko-botcast/" onload="this.style.opacity = 1" frameborder="0"></iframe>
                       </div>
                     </div>
                 </div> <!-- col -->
@@ -136,7 +136,7 @@
                 <br>
                 <p>I built the JOCKO BOTCAST to complete my random quote generator assignment for freeCodeCamp. It pays tribute to the JOCKO PODCAST and sources its content from the podcast's episodes.</p>
                 <form>
-                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/NaWYQo/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/jocko-botcast/') type="button" value="Launch Website">
                   <input class="btn btn-default" onclick=window.open('http://jockopodcast.com/') type="button" value="Visit Jocko Podcast">
                 </form>
               </div> <!-- caption -->
@@ -149,16 +149,17 @@
                 <div class="col-md-8 col-md-offset-2">
                     <div class="thumbnail-container">
                       <div class="thumbnail">
-                        <iframe src="https://codepen.io/ewotawa/full/qPpwaK/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                        <iframe src="https://ewotawa.github.io/weather-app/" onload="this.style.opacity = 1" frameborder="0"></iframe>
                       </div>
                     </div>
                 </div> <!-- col -->
               </div> <!-- row -->
               <div class="caption">
                 <br>
-                <p>This app relies on the Census Bureau's geolocation API to convert a US street address to latitude and longitude coordinates, which then are fed into the FCC Weather API to deliver local weather data.</p>
+                <p>This app relies on the Census Bureau's geolocation API to convert a US street address to latitude and longitude coordinates, which then are fed into the FCC Weather API to deliver local weather data. I decided to revamp this page in May 2018 to practice concepts I was learning in Udacty's Mobile Web Specialist Nanodegree program. You can access both versions of the site below.</p>
                 <form>
-                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/qPpwaK/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/weather-app/') type="button" value="Launch Updated Website">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/qPpwaK/') type="button" value="Launch Original Website">
                 </form>
               </div> <!-- caption -->
             </div> <!-- col -->
