Edit style for portfolio ul. Add service worker elements.

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 
       <!-- portfolio -->
-      <article id="credentials" class="container dark-row">
+      <article id="credentials" class="container dark-orange-row">
 
         <h1 class="text-center full-width">Credentials, Scholarships, and Nanodegrees</h1>
         
@@ -291,7 +291,9 @@
     </footer>
     
       <!-- JavaScript link -->
-    	<script src="assets/js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="assets/js/idb.js"></script>
+  <script type="application/javascript" charset="utf-8" src="sw.js"></script>
+  <script type="application/javascript" charset="utf-8" src="assets/js/main.js"></script>
 
   </body>
   
