remove scroll function; deprecate codepen links in favor of github projects

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <!--Individual Stylesheet-->
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    
+    <!-- Service Worker Manifest -->
+    <link rel="manifest" href="/manifest.json">
+
   </head>
   
   <body id="body">
@@ -80,7 +84,7 @@
             <h3 class="text-center thumb-box">Willie McGee</h3>
             <div class="thumbnail-container">
               <div class="thumbnail">
-                <iframe src="https://codepen.io/ewotawa/full/dzbrvE/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                <iframe src="https://ewotawa.github.io/willie-mcgee/" onload="this.style.opacity = 1" frameborder="0"></iframe>
               </div>
             </div>
             <div class="caption">
@@ -88,8 +92,9 @@
                 <p>I created this project for my freeCodeCamp Tribute Page assignment.
                 <p>The page functionality features HTML, CSS, and Bootstrap. The content profiles my favorite baseball player.</p>
                 <form>
-                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/dzbrvE/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/willie-mcgee/') type="button" value="Launch Website">
                   <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/dzbrvE/') type="button" value="Preview on CodePen">
                 </form>
               </div>
           </li>
@@ -147,25 +152,26 @@
               <p>This app relies on the Census Bureau's geolocation API to convert a US street address to latitude and longitude coordinates, which then are fed into the FCC Weather API to deliver local weather data. I decided to revamp this page in May 2018 to practice concepts I was learning in Udacty's Mobile Web Specialist Nanodegree program. You can access both versions of the site below.</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/weather-app/') type="button" value="Launch Updated Website">
-                <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/qPpwaK/') type="button" value="Launch Original Website">
+                <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/qPpwaK/') type="button" value="Preview on CodePen">
               </form>
             </div>
           </li>
 
 
           <li>
-            <!-- Weather App -->
+            <!-- Wikipedia App -->
             <h3 class="text-center thumb-box">Wikipedia Search</h3>
             <div class="thumbnail-container">
               <div class="thumbnail">
-                <iframe src="https://codepen.io/ewotawa/full/PJyKOW/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                <iframe src="https://ewotawa.github.io/wikipedia-search/" onload="this.style.opacity = 1" frameborder="0"></iframe>
               </div>
             </div>
             <div class="caption">
               <br>
               <p>This pen uses Javascript to render search results from the Wikipedia API.</p>
               <form>
-                <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/PJyKOW/') type="button" value="Launch Website">
+                <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/wikipedia-search/') type="button" value="Launch Website">
+                <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/PJyKOW/') type="button" value="Preview on CodePen">
               </form>
             </div> 
           </li>
@@ -177,14 +183,15 @@
             <h3 class="text-center thumb-box">8-Bit Mario Star Animation</h3>
             <div class="thumbnail-container">
               <div class="thumbnail">
-                <iframe src="https://codepen.io/ewotawa/full/aLGZRO/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                <iframe src="https://ewotawa.github.io/eight-bit-mario/" onload="this.style.opacity = 1" frameborder="0"></iframe>
               </div>
             </div>
             <div class="caption">
                 <br>
                 <p>A CSS-driven animation of 8-bit Mario with his star superpower.</p>
                 <form>
-                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/aLGZRO/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/eight-bit-mario/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/aLGZRO/') type="button" value="Preview on CodePen">
                 </form>
               </div>
           </li>
