register service worker; edit manifest.json

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     
     <!-- Service Worker Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
   </head>
   
@@ -301,6 +301,7 @@
   <script type="application/javascript" charset="utf-8" src="assets/js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="sw.js"></script>
   <script type="application/javascript" charset="utf-8" src="assets/js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="assets/js/indexController.js"></script>
 
   </body>
   
