--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#credentials">Credentials</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#homescreen">Add to Homescreen</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -281,14 +282,16 @@
         </div>
       </article>
 
+      <aticle id="homescreen">
+        <button class="btn btn-default" id='btnAdd'>Add to Homescreen</button>
+      </article>
 
     </section>
     
 
 
-
     <footer>
-      <div class="dark-row-footer" id="contact">
+      <div class="dark-row-footer">
         <div class="container">
           <p>A <span class="fa fa-coffee"></span>-fueled project by Elizabeth Wotawa <span class="fa fa-hand-spock-o"></span></p>
           <br>
