add styling to homescreen button

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
       </article>
 
-      <aticle id="homescreen">
+      <aticle class="center" id="homescreen">
         <button class="btn btn-default" id='btnAdd'>Add to Homescreen</button>
       </article>
 
