add console logging for web app install prompt

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       </article>
 
       <aticle class="center" id="homescreen">
-        <button class="btn btn-default" id='btnAdd'>Add to Homescreen</button>
+        <button class="btn btn-default" id="btnAdd">Add to Homescreen</button>
       </article>
 
     </section>
