add meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Penguin Phoenix</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Elizabeth Wotawa's portfolio page">
+    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix">
+    <meta name="author" content="Elizabeth Wotawa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
