update bio text, split out GWG Challenge and Nanodegree, update PyTorch Challenge language

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <hr>
         <div>
           <h3>By day ...</h3>
-          <p>I am a system administrator thriving at the intersection of regulated utility business process, database administration, and system configuration.</p>
+          <p>I am a data scientist providing customer-focused solutions in an agile environment.</p>
         </div>
         <div>
           <h3 class="text-right">By night ...</h3>
-          <p class="text-right">I'm usually tinkering with data science or with web design. I'm currently exploring responsive design, service workers and other offline-first strategies, and the fetch API.</p>
+          <p class="text-right">I'm usually tinkering with data science or with web design. I'm currently exploring service workers and other offline-first strategies, JavaScript, and PyTorch.</p>
         </div>
         <hr>
         <div>
@@ -244,19 +244,32 @@
 
           <li>
             <!-- Grow with Google -->
-            <h3 class="text-center thumb-box">Udacity Mobile Web Specialist</h3>
+            <h3 class="text-center thumb-box">Grow with Google Challenge</h3>
             <img class="cred" src="assets/images/gwg.png">
             <div class="caption">
               <br>
-              <p>Thanks to this scholarship program, I earned Udacity's Mobile Web Specialist Nanodegree in October 2018.</p>
+              <p>I participated in this Google-sponsored Udacity Scholarship challenge in the Intermediate Web Developer path. I was one of 25,000 participants selected to compete for one of 1,000 scholarships to the Udacity Mobile Web Specialist Nanodegrees. I earned the nanodegree scholarship in January 2018.</p>
               <p>#GrowWithGoogle #GoogleUdacityScholars</p>
               <form>
-                <input class="btn btn-default" onclick=window.open('https://confirm.udacity.com/XZPKTTCA') type="button" value="View Certificate">
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/grow-with-google') type="button" value="Learn More">
               </form>
             </div> 
           </li>
 
+          <li>
+            <!-- Udacity Mobile Web Specialist Nanodegree -->
+            <h3 class="text-center thumb-box">Udacity Mobile Web Specialist Nanodegree</h3>
+            <img class="cred" src="assets/images/udacity_nanodegree.png">
+            <div class="caption">
+              <br>
+              <p>This Nanodegree program introduces students to responsive design and to offline-first features for web sites, such as service workers and IndexedDB. I completed this Nanodegree in October 2018 on the Grow with Google Scholarship.</p>
+              <p>#GrowWithGoogle #GoogleUdacityScholars</p>
+              <form>
+                <input class="btn btn-default" onclick=window.open('https://confirm.udacity.com/XZPKTTCA') type="button" value="View Certificate">
+                <input class="btn btn-default" onclick=window.open('https://www.udacity.com/course/mobile-web-specialist-nanodegree--nd024') type="button" value="Learn More">
+              </form>
+            </div> 
+          </li>
 
           <li>
             <!-- Udacity PyTorch Challenge -->
@@ -264,7 +277,7 @@
             <img class="cred" src="assets/images/pytorch.png">
             <div class="caption">
               <br>
-              <p>I am currently participating in the PyTorch Scholarship Challenge, sponsored by Udacity and Facebook.</p>
+              <p>I participated in the PyTorch Scholarship Challenge, sponsored by Udacity and Facebook from November 2018 to January 2019.</p>
               <p>#pytorchudacityscholar</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-pytorch-scholarship') type="button" value="Learn More">
