--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Elizabeth Wotawa's portfolio page">
-    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix">
+    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar">
     <meta name="author" content="Elizabeth Wotawa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
@@ -267,6 +267,7 @@
               <form>
                 <input class="btn btn-default" onclick=window.open('https://confirm.udacity.com/XZPKTTCA') type="button" value="View Certificate">
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/course/mobile-web-specialist-nanodegree--nd024') type="button" value="Learn More">
+                <input class="btn btn-default" onclick=window.open('https://github.com/ewotawa/mws-restaurant-stage-1') type="button" value="Final Project">
               </form>
             </div> 
           </li>
@@ -277,13 +278,29 @@
             <img class="cred" src="assets/images/pytorch.png">
             <div class="caption">
               <br>
-              <p>I participated in the PyTorch Scholarship Challenge, sponsored by Udacity and Facebook from November 2018 to January 2019.</p>
-              <p>#pytorchudacityscholar</p>
+              <p>I participated in the PyTorch Scholarship Challenge, sponsored by Udacity and Facebook, from November 2018 to January 2019. I learned how to build, to train, and to deploy state-of-the-art deep learning models with PyTorch.</p>
+              <p>#PytorchUdacityScholar</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-pytorch-scholarship') type="button" value="Learn More">
+                <input class="btn btn-default" onclick=window.open('https://github.com/ewotawa/udacity_pytorch_challenge') type="button" value="Final Project">
               </form>
             </div> 
           </li>
+          
+          <li>
+            <!-- Udacity Secure and Private AI Challenge -->
+            <h3 class="text-center thumb-box">Udacity Secure and Private AI Challenge</h3>
+            <img class="cred" src="assets/images/secure-private-ai.png">
+            <div class="caption">
+              <br>
+              <p>I am participating in the Secure and Private AI Scholarship Challenge, sponsored by Udacity and Facebook, from May to August 2019. I will learn how to use distributed private data with differential privacy, federated learning, and encrypted computation techniques. I also will be competing for one of 300 follow-up Nanodegree scholarships.</p>
+              <p>#UdacityFacebookScholar</p>
+              <form>
+                <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-AI-scholarship') type="button" value="Learn More">
+              </form>
+            </div> 
+          </li>
+
         </ul>
         
       </article>
