Added YouTube link to socials, Project T-Shirt link to SPAIC card

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
               <p>#UdacityFacebookScholar</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-AI-scholarship') type="button" value="Learn More">
+                <input class="btn btn-default" onclick=window.open('https://github.com/parthatom/GANonTshirtTutorial') type="button" value="Project T-Shirt"
               </form>
             </div> 
           </li>
@@ -353,6 +354,7 @@
 
           <p onclick=window.open('https://www.kaggle.com/ewotawa') class="fab fa-kaggle fa-contact" role="button"></p>
 
+          <p onclick=window.open('https://www.youtube.com/channel/UCvjRTRpbT3PZ0jwKd8aOiEg') class="fab fa-youtube fa-contact" role="button"></p>
           <br>
         </div>
       </article>
