Added search terms

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Elizabeth Wotawa's portfolio page">
-    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar">
+    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar, 60DaysofUdacity">
     <meta name="author" content="Elizabeth Wotawa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
@@ -294,7 +294,7 @@
             <div class="caption">
               <br>
               <p>I am participating in the Secure and Private AI Scholarship Challenge, sponsored by Udacity and Facebook, from May to August 2019. I will learn how to use distributed private data with differential privacy, federated learning, and encrypted computation techniques. I also will be competing for one of 300 follow-up Nanodegree scholarships.</p>
-              <p>#UdacityFacebookScholar</p>
+              <p>#UdacityFacebookScholar #60DaysofUdacity</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-AI-scholarship') type="button" value="Learn More">
                 <input class="btn btn-default" onclick=window.open('https://github.com/parthatom/GANonTshirtTutorial') type="button" value="Project T-Shirt"
