add Project T-Shirt image gallery and AZ-900 credential.

--- a/index.html
+++ b/index.html
@@ -294,14 +294,29 @@
             <div class="caption">
               <br>
               <p>I am participating in the Secure and Private AI Scholarship Challenge, sponsored by Udacity and Facebook, from May to August 2019. I will learn how to use distributed private data with differential privacy, federated learning, and encrypted computation techniques. I also will be competing for one of 300 follow-up Nanodegree scholarships.</p>
+              <p>I am part of lead team for Project T-Shirt. We encourage students to generate images using AI and machine learning techniques, such as style transfer or GAN. Students vote on their favorites, and we will print the top three images on swag such as t-shirts and mugs. Proceeds will be donated to charity. I created the gallery below for those students who could not access the Facebook album originally hosting the images.</p>
               <p>#UdacityFacebookScholar #60DaysofUdacity</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-AI-scholarship') type="button" value="Learn More">
-                <input class="btn btn-default" onclick=window.open('https://github.com/parthatom/GANonTshirtTutorial') type="button" value="Project T-Shirt"
+                <input class="btn btn-default" onclick=window.open('https://github.com/parthatom/GANonTshirtTutorial') type="button" value="Project T-Shirt">
+                <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/spaic_tshirt_gallery/') type="button" value="Image Gallery">
               </form>
             </div> 
           </li>
 
+          <li>
+            <!-- Microsoft Azure Fundamentals -->
+            <h3 class="text-center thumb-box">Microsoft Azure Fundamentals (AZ-900)</h3>
+            <img class="cred" src="assets/images/az900.JPG">
+            <div class="caption">
+              <br>
+              <p>I earned the Microsoft Azure Fundamentals certification by passing the AZ-900 exam in July 2019.</p>
+              <form>
+                <input class="btn btn-default" onclick=window.open('https://www.youracclaim.com/badges/c8e18533-7416-4e3f-b8c6-7c8e5c3c0cfc/public_url') type="button" value="View Credential">
+                <input class="btn btn-default" onclick=window.open('https://www.microsoft.com/en-us/learning/exam-AZ-900.aspx') type="button" value="Learn More"
+              </form>
+            </div> 
+          </li>
         </ul>
         
       </article>
