add styling to unordered list on Azure card

--- a/index.html
+++ b/index.html
@@ -310,7 +310,16 @@
             <img class="cred" src="assets/images/az900.JPG">
             <div class="caption">
               <br>
-              <p>I earned the Microsoft Azure Fundamentals certification by passing the AZ-900 exam in July 2019.</p>
+              <p>I earned the Microsoft Azure Fundamentals certification by passing the AZ-900 exam in July 2019. This exam covers the following skill areas:</p>
+              <ul>
+                <li>Azure</li>
+                <li>Cloud Data</li>
+                <li>Cloud Networking</li>
+                <li>Cloud Security</li>
+                <li>Cloud Services</li>
+                <li>Cloud Storage</li>
+                <li>Virtualization</li>
+              </ul>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.youracclaim.com/badges/c8e18533-7416-4e3f-b8c6-7c8e5c3c0cfc/public_url') type="button" value="View Credential">
                 <input class="btn btn-default" onclick=window.open('https://www.microsoft.com/en-us/learning/exam-AZ-900.aspx') type="button" value="Learn More"
