fix spelling of 'penguin'

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           
           <li>
             <!-- Penguin Phoenix Philosophy -->
-            <h3 class="text-center thumb-box">The Peguin Phoenix Philosophy</h3>
+            <h3 class="text-center thumb-box">The Penguin Phoenix Philosophy</h3>
             <img class="cred" src="assets/images/ian-parker-546258-unsplash.jpg">
             <div class="caption">
                 <br>
