Updated job title and verb tenses.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <hr>
         <div>
           <h3>By day ...</h3>
-          <p>I am a data scientist providing customer-focused solutions in an agile environment.</p>
+          <p>I am a consultant providing customer-focused solutions in an agile environment.</p>
         </div>
         <div>
           <h3 class="text-right">By night ...</h3>
@@ -293,8 +293,8 @@
             <img class="cred" src="assets/images/secure-private-ai.png">
             <div class="caption">
               <br>
-              <p>I am participating in the Secure and Private AI Scholarship Challenge, sponsored by Udacity and Facebook, from May to August 2019. I will learn how to use distributed private data with differential privacy, federated learning, and encrypted computation techniques. I also will be competing for one of 300 follow-up Nanodegree scholarships.</p>
-              <p>I am part of lead team for Project T-Shirt. We encourage students to generate images using AI and machine learning techniques, such as style transfer or GAN. Students vote on their favorites, and we will print the top three images on swag such as t-shirts and mugs. Proceeds will be donated to charity. I created the gallery below for those students who could not access the Facebook album originally hosting the images.</p>
+              <p>I participated in the Secure and Private AI Scholarship Challenge, sponsored by Udacity and Facebook, from May to August 2019. I learned how to use distributed private data with differential privacy, federated learning, and encrypted computation techniques. I was selected for one of 300 follow-up Nanodegree scholarships.</p>
+              <p>I was part of the lead team for Project T-Shirt. We encouraged students to generate images using AI and machine learning techniques, such as style transfer or GAN. Students voted on their favorites, and we printed the top two images on swag such as t-shirts and mugs. Proceeds will be donated to charity. Please see the gallery below for more detail.</p>
               <p>#UdacityFacebookScholar #60DaysofUdacity</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.udacity.com/facebook-AI-scholarship') type="button" value="Learn More">
