add The Alphabet of Nations article

--- a/index.html
+++ b/index.html
@@ -352,6 +352,19 @@
                 </form>
               </div>
           </li>
+          
+           <li>
+            <!-- The Alphabet of Nations -->
+            <h3 class="text-center thumb-box">The Alphabet of Nations</h3>
+            <img class="cred" src="assets/images/alphabet_of_nations_opt_256.gif">
+            <div class="caption">
+                <br>
+                <p>How to create an animated GIF from a sequence of scanned JPG images in the Linux Terminal with ImageMagick and Gifsicle.</p>
+                <form>
+                  <input class="btn btn-default" onclick=window.open('article_alphabet.html') type="button" value="View Article">
+                </form>
+              </div>
+          </li>
 
         </ul>
         
