add responsive CSS for YouTube. See reference on style sheet.

--- a/article_alphabet.html
+++ b/article_alphabet.html
@@ -100,7 +100,7 @@
         <p>As I looked at the two templates, I worked my way through the TMBG songbook for inspiration. John Linnell came out with a great album called <i>State Songs</i> when I was in college, but I couldn't quite figure out how to get the melodies to fit with the map of the United States. I then thought of another TMBG song from <i>Here Come the ABCs</i>: <i>The Alphabet of Nations</i>. </p>
         
         <center>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/drgrvDypOjA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/drgrvDypOjA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </center>
         
         <br>
