update codepen references

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <form>
                   <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/willie-mcgee/') type="button" value="Launch Website">
                   <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
-                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/dzbrvE/') type="button" value="Preview on CodePen">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/WNwroBV') type="button" value="Preview on CodePen">
                 </form>
               </div>
           </li>
